fix/card shring on mobile

--- a/src/pages/Quiz/QuizQuestion/components/singleSelectImage/style.scss
+++ b/src/pages/Quiz/QuizQuestion/components/singleSelectImage/style.scss
@@ -17,7 +17,7 @@
 
   &__description {
     color: $primary-color;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
   }
 
